fixed issues with uneven card layout in feed

--- a/homepage.css
+++ b/homepage.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Titillium Web', sans-serif;
     padding: 1em;
     max-width: 1080px;
-    margin: 20px auto;
+    margin: auto;
 }
 
 a {
@@ -28,6 +28,8 @@ li {
     border-right: 0px solid black;
 }
 
-h2 {
-
+.card-img-top {
+    width: 100%;
+    height: 10vw;
+    object-fit: cover;
 }
